Updated page Macro FCInfo/fr

--- a/wiki/fr/Macro_FCInfo.html
+++ b/wiki/fr/Macro_FCInfo.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCInfo&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (88% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCInfo.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (54% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCInfo (6% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../sv/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (9% translated)" lang="sv" dir="ltr">svenska</a></li>
@@ -279,14 +279,11 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Secteur_10_:_Centre">Secteur 10&nbsp;: Centre</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Center_of_00.png&amp;filetimestamp=20221021104033&amp;.html" class="mw-file-description" title="FCInfo Center of..."><img alt="FCInfo Center of..." src="../File/Macro_FCInfo_Center_of_00.png" decoding="async" width="398" height="143" class="mw-file-element" data-file-width="398" data-file-height="143"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>Centre de la forme et ces coordonn&eacute;es XYZ</li>
 <li>Centre de masse et ces coordonn&eacute;es XYZ</li>
 <li>Les <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Boutons</span> cr&eacute;ent sur un point, un axe, un plan, copie un axe vectoriel sous forme de <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b> <i>(voir Secteur 13)</i></li></ul>
-<p><i>(vous pouvez mettre &agrave; <code>false</code> la variable <b>switch_setVisible_GBox_010_Center_Mass</b> pour cacher la bo&icirc;te)</i>.
-</p>
-</div>
-<p><span id="Sector_11:_Inertia"></span>
+<p><i>(pour masquer la bo&icirc;te, la variable &laquo;&nbsp;switch_setVisible_GBox_010_Center_Mass&nbsp;&raquo; peut &ecirc;tre d&eacute;finie sur <code>false</code>).</i>.
+</p><p><span id="Sector_11:_Inertia"></span>
 </p>
 <h3><span id="Secteur_11_:_Centre_d.27inertie"></span><span class="mw-headline" id="Secteur_11_:_Centre_d'inertie">Secteur 11&nbsp;: Centre d'inertie</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inertia_00.png&amp;filetimestamp=20221021103928&amp;.html" class="mw-file-description" title="FCInfo Inertia"><img alt="FCInfo Inertia" src="../File/Macro_FCInfo_Inertia_00.png" decoding="async" width="398" height="428" class="mw-file-element" data-file-width="398" data-file-height="428"></a></span>
@@ -693,35 +690,35 @@ Ici un autre post traitant de <a rel="nofollow" class="external text" href="http
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210029
+Cached time: 20260112215336
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.233 seconds
-Real time usage: 0.763 seconds
-Preprocessor visited node count: 1537/1000000
+CPU time usage: 0.220 seconds
+Real time usage: 0.375 seconds
+Preprocessor visited node count: 1536/1000000
 Post&#8208;expand include size: 41729/2097152 bytes
 Template argument size: 5282/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 15929/5000000 bytes
+Unstrip post&#8208;expand size: 15933/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  165.126      1 -total
- 25.60%   42.269     10 Template:Code
-  6.58%   10.860      8 Template:RadioButton
-  5.64%    9.310      1 Template:CodeDownload
-  4.18%    6.902      5 Template:Clear
-  4.06%    6.704      1 Template:Macro/fr
-  3.75%    6.190     44 Template:LineEdit
-  2.69%    4.446      5 Template:SpinBox
-  2.32%    3.832     11 Template:CheckBox
-  2.18%    3.606     30 Template:False
+100.00%  105.469      1 -total
+  7.09%    7.483     26 Template:Button
+  5.44%    5.740     10 Template:Code
+  5.24%    5.531      1 Template:Macro/fr
+  5.02%    5.293      4 Template:ComboBox
+  4.74%    5.003     44 Template:LineEdit
+  4.29%    4.529     11 Template:CheckBox
+  3.85%    4.065      8 Template:RadioButton
+  3.41%    3.592     19 Template:True
+  3.26%    3.440      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10888-0!canonical and timestamp 20260111210028 and revision id 1736259. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10888-0!canonical and timestamp 20260112215335 and revision id 1737773. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
