--- a/wiki/fr/Macros_recipes.html
+++ b/wiki/fr/Macros_recipes.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macros recipes/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macros+recipes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrorezepte (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--high" title="Makrorezepte (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macros_recipes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macros recipes (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (1% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Raccolta di macro (8% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Przepisy na makropolecenia (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--high" title="Przepisy na makropolecenia (99% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../sv/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (0% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Makro n&aacute;vody (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="&#1057;&#1073;&#1086;&#1088;&#1085;&#1080;&#1082; &#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1086;&#1074; (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -84,9 +84,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_Iges_PyImporter.html" title="Macro Iges PyImporter/fr">Macro Iges PyImporter</a></span>&nbsp;: importe un fichier iges avec l'entit&eacute; 128, par exemple un fichier <a rel="nofollow" class="external text" href="https://fr.wikipedia.org/wiki/Initial_Graphics_Exchange_Specification">IGES</a> de FreeShip, dans FreeCAD.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_MeshToPart.png&amp;filetimestamp=20190614154950&amp;.html" class="mw-file-description"><img src="../File/Macro_MeshToPart.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_MeshToPart.html" title="Macro MeshToPart/fr">Macro MeshToPart</a></span>&nbsp;: convertit les maillages s&eacute;lectionn&eacute;s en pi&egrave;ces.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=MultiCopy-reduced.png&amp;filetimestamp=20210317163135&amp;.html" class="mw-file-description"><img src="../File/MultiCopy-reduced.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_MultiCopy.html" title="Macro MultiCopy/fr">Macro MultiCopy</a></span>&nbsp;: permet la duplication (copier-coller) de plusieurs objets FreeCAD qui peuvent &ecirc;tre &eacute;tiquet&eacute;s s&eacute;quentiellement et de mani&egrave;re personnalis&eacute;e.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Multi_Export.html" title="Macro Multi Export">Macro Multi Export</a></span>: This macro makes it much quicker to export models in multiple 3D printing formats with one simple command.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_Multi_Export.html" title="Macro Multi Export/fr">Macro Multi Export</a></span>&nbsp;: cette macro permet d'exporter beaucoup plus rapidement des mod&egrave;les dans plusieurs formats d'impression 3D &agrave; l'aide d'une simple commande.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=PartToVRML.png&amp;filetimestamp=20160203215226&amp;.html" class="mw-file-description"><img src="../File/PartToVRML.png" decoding="async" width="24" height="23" class="mw-file-element" data-file-width="64" data-file-height="62"></a></span> <a href="../fr/Macro_PartToVRML.html" title="Macro PartToVRML/fr">Macro PartToVRML</a></span>&nbsp;: convertit les pi&egrave;ces s&eacute;lectionn&eacute;es en maillages VRML pour une taille r&eacute;duite et un chargement plus rapide (mod&egrave;les VRML compatibles avec Kicad et Blender).</li></ul>
 </div>
 </div>
@@ -413,31 +411,31 @@
 <li>Dans l'onglet <b>Barres d'outils</b>, cr&eacute;ez une nouvelle barre d'outils, puis ajoutez votre macro, en la copiant dans la cat&eacute;gorie <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260112191353
+Cached time: 20260112215441
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.547 seconds
-Real time usage: 2.744 seconds
-Preprocessor visited node count: 2864/1000000
-Post&#8208;expand include size: 27849/2097152 bytes
-Template argument size: 15158/2097152 bytes
+CPU time usage: 0.502 seconds
+Real time usage: 0.814 seconds
+Preprocessor visited node count: 2863/1000000
+Post&#8208;expand include size: 27852/2097152 bytes
+Template argument size: 15161/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1951/5000000 bytes
+Unstrip post&#8208;expand size: 1941/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  116.037      1 -total
- 40.92%   47.481    219 Template:MacroLink
-  8.82%   10.236      1 Template:Version/fr
-  8.70%   10.095      6 Template:MenuCommand
-  3.44%    3.991      3 Template:Button
-  2.84%    3.301      1 Template:TOCright
+100.00%   25.924      1 -total
+ 41.92%   10.868    219 Template:MacroLink
+  7.22%    1.871      1 Template:Version/fr
+  5.49%    1.423      6 Template:MenuCommand
+  4.70%    1.218      3 Template:Button
+  3.92%    1.015      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1876-0!canonical and timestamp 20260112191350 and revision id 1737692. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1876-0!canonical and timestamp 20260112215440 and revision id 1737777. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
