Created page with "* {{MacroLink|Icon=Macro_Cut_Object_For_Magnets.png|Macro_Cut_Object_For_Magnets/fr|Macro Cut Object For Magnets}} : cette macro permet de découper facilement un objet et d'insérer des trous ronds d'un nombre, d'une largeur et d'une profondeur prédéfinis  de chaque côté de la découpe pour y insérer des aimants (ou des chevilles). Cela peut être utile pour diverses applications d'impression 3D, etc."

--- a/wiki/fr/Macros_recipes.html
+++ b/wiki/fr/Macros_recipes.html
@@ -227,9 +227,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Center_Align_Objects_with_Faces_or_Edges.png&amp;filetimestamp=20170212141827&amp;.html" class="mw-file-description"><img src="../File/Macro_Center_Align_Objects_with_Faces_or_Edges.png" decoding="async" width="24" height="22" class="mw-file-element" data-file-width="64" data-file-height="59"></a></span> <a href="../fr/Macro_Center_Align_Objects_with_Faces_or_Edges.html" title="Macro Center Align Objects with Faces or Edges/fr">Macro Center Align Objects with Faces or Edges</a></span>&nbsp;: traite des contraintes suivantes&nbsp;: contrainte concentrique entre pi&egrave;ces non cylindriques et contrainte sur les faces et/ou les ar&ecirc;tes centrales. Elle fonctionne &eacute;galement avec les nouveaux conteneurs Body et App::Part, ainsi qu'avec la hi&eacute;rarchie STEP.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_CloneConvert.png&amp;filetimestamp=20150725195453&amp;.html" class="mw-file-description"><img src="../File/Macro_CloneConvert.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_CloneConvert.html" title="Macro CloneConvert/fr">Macro CloneConvert</a></span>&nbsp;: cr&eacute;e un clone de l'objet et le convertit dans la position et la taille choisie (inch, mm, m, &micro;m...). L'objet de base est reconnu en mm (FreeCAd base).</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep.png&amp;filetimestamp=20160607100845&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="65" data-file-height="64"></a></span> <a href="../fr/Macro_Connect_And_Sweep.html" title="Macro Connect And Sweep/fr">Macro Connect And Sweep</a></span>&nbsp;: cr&eacute;e facilement une connexion entre deux objets, un objet et un point ou entre deux points ou la ligne, la polyligne, le bord s&eacute;lectionn&eacute;s (le centre des objets sont les points de d&eacute;part et d'arriv&eacute;e du balayage) peuvent &ecirc;tre s&eacute;lectionn&eacute;s sous la forme d'un cercle ellipse polygone configurable.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Cut_Object_For_Magnets.html" title="Macro Cut Object For Magnets">Macro Cut Object For Magnets</a></span>: This macro makes it easy to slice apart an object and insert round holes fo a declared number, width and depth  on each side of the cut for magnets (or dowels). This can be useful for various 3D printing applications, etc.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_Cut_Object_For_Magnets.html" title="Macro Cut Object For Magnets/fr">Macro Cut Object For Magnets</a></span>&nbsp;: cette macro permet de d&eacute;couper facilement un objet et d'ins&eacute;rer des trous ronds d'un nombre, d'une largeur et d'une profondeur pr&eacute;d&eacute;finis  de chaque c&ocirc;t&eacute; de la d&eacute;coupe pour y ins&eacute;rer des aimants (ou des chevilles). Cela peut &ecirc;tre utile pour diverses applications d'impression 3D, etc.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Std_AxisCross_example.svg&amp;filetimestamp=20200402191429&amp;.html" class="mw-file-description"><img src="../File/Std_AxisCross_example.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="150" data-file-height="150"></a></span> <a href="../fr/Macro_Express_Placement.html" title="Macro Express Placement/fr">Macro Express Placement</a></span>&nbsp;: affiche et modifie rapidement les coordonn&eacute;es de placement d'un objet s&eacute;lectionn&eacute;, directement ou par le biais d'expressions.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire.png&amp;filetimestamp=20190704184313&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_FlattenWire.html" title="Macro FlattenWire/fr">Macro FlattenWire</a></span>&nbsp;: aplatit les polylignes qui ne sont pas planaires &agrave; leur coordonn&eacute;e Z m&eacute;diane.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FlattenWire3Points.png&amp;filetimestamp=20190706165929&amp;.html" class="mw-file-description"><img src="../File/Macro_FlattenWire3Points.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Macro_FlattenWire3Points.html" title="Macro FlattenWire3Points/fr">Macro FlattenWire3Points</a></span>&nbsp;: aplatit les polylignes qui ne sont pas planaires &agrave; un plan d&eacute;fini par 3 points.</li></ul>
@@ -411,15 +409,15 @@
 <li>Dans l'onglet <b>Barres d'outils</b>, cr&eacute;ez une nouvelle barre d'outils, puis ajoutez votre macro, en la copiant dans la cat&eacute;gorie <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260112215441
+Cached time: 20260112215555
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.502 seconds
-Real time usage: 0.814 seconds
-Preprocessor visited node count: 2863/1000000
-Post&#8208;expand include size: 27852/2097152 bytes
-Template argument size: 15161/2097152 bytes
+CPU time usage: 0.514 seconds
+Real time usage: 0.757 seconds
+Preprocessor visited node count: 2862/1000000
+Post&#8208;expand include size: 27855/2097152 bytes
+Template argument size: 15164/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -427,15 +425,15 @@ Unstrip post&#8208;expand size: 1941/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.924      1 -total
- 41.92%   10.868    219 Template:MacroLink
-  7.22%    1.871      1 Template:Version/fr
-  5.49%    1.423      6 Template:MenuCommand
-  4.70%    1.218      3 Template:Button
-  3.92%    1.015      1 Template:TOCright
+100.00%   26.121      1 -total
+ 40.91%   10.687    219 Template:MacroLink
+  8.69%    2.271      1 Template:Version/fr
+  5.93%    1.550      6 Template:MenuCommand
+  4.29%    1.120      3 Template:Button
+  4.26%    1.113      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1876-0!canonical and timestamp 20260112215440 and revision id 1737777. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1876-0!canonical and timestamp 20260112215554 and revision id 1737781. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
