--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Package Metadata (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Metadane pakietu (97% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Metadane pakietu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
@@ -174,15 +174,13 @@
 <h4><span class="mw-headline" id="Attributs_6">Attributs</span></h4>
 <p>Toutes les d&eacute;pendances et relations peuvent restreindre leur applicabilit&eacute; &agrave; des versions particuli&egrave;res. Un attribut peut &ecirc;tre utilis&eacute; pour chaque op&eacute;rateur de comparaison. Deux de ces attributs peuvent &ecirc;tre utilis&eacute;s ensemble pour d&eacute;crire une gamme de versions.
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>version_lt="VERSION" (facultatif)&nbsp;: la d&eacute;pendance au paquet est limit&eacute;e aux versions inf&eacute;rieures au num&eacute;ro de version indiqu&eacute;.</li>
 <li>version_lte="VERSION" (facultatif)&nbsp;: la d&eacute;pendance au paquet est limit&eacute;e aux versions inf&eacute;rieures ou &eacute;gales au num&eacute;ro de version indiqu&eacute;.</li>
 <li>version_eq="VERSION" (facultatif)&nbsp;: la d&eacute;pendance au paquet est restreinte &agrave; une version &eacute;gale au num&eacute;ro de version indiqu&eacute;.</li>
 <li>version_gte="VERSION" (facultatif)&nbsp;: la d&eacute;pendance au paquet est limit&eacute;e aux versions sup&eacute;rieures ou &eacute;gales au num&eacute;ro de version indiqu&eacute;.</li>
 <li>version_gt="VERSION" (facultatif)&nbsp;: la d&eacute;pendance au paquet est limit&eacute;e aux versions sup&eacute;rieures au num&eacute;ro de version indiqu&eacute;.</li>
 <li>optional="true|false"&nbsp;: si "optional" est "true", la d&eacute;pendance est trait&eacute;e comme facultative lorsque l'extension est install&eacute;e &agrave; l'aide du gestionnaire des extensions. En g&eacute;n&eacute;ral, cela signifie qu'un &eacute;chec de l'installation de la d&eacute;pendance n'emp&ecirc;che pas l'installation de l'extension, et l'utilisateur peut &ecirc;tre invit&eacute; &agrave; dire s'il veut l'installer. Les versions de FreeCAD ant&eacute;rieures &agrave; 0.21 ne reconnaissent pas cet attribut et l'ignorent.</li>
-<li>type="automatic|addon|internal|python"&nbsp;: facultatif, la valeur par d&eacute;faut est "automatic". Indique &agrave; quoi se r&eacute;f&egrave;re cette d&eacute;claration de d&eacute;pendance. "addon" est pour les extensions externes, "internal" est pour les ateliers internes (par exemple "arch", "sketcher", etc.), et "python" indique une d&eacute;pendance du paquetage Python. Les versions de FreeCAD ant&eacute;rieures &agrave; 0.21 n'utilisent pas cet attribut, et "automatic" est toujours suppos&eacute;.</li></ul>
-</div>
+<li>type="automatic|addon|internal|python"&nbsp;: facultatif, la valeur par d&eacute;faut est "automatic". Indique &agrave; quoi se r&eacute;f&egrave;re cette d&eacute;claration de d&eacute;pendance. "addon" est pour les extensions externes, "internal" est pour les ateliers internes, et "python" indique une d&eacute;pendance du paquetage Python. Les versions de FreeCAD ant&eacute;rieures &agrave; 0.21 n'utilisent pas cet attribut, et "automatic" est toujours suppos&eacute;.</li></ul>
 <h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
 <p>The following internal workbench types are available:
 </p>
@@ -373,34 +371,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213200
+Cached time: 20260112215653
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.079 seconds
-Preprocessor visited node count: 522/1000000
+CPU time usage: 0.059 seconds
+Real time usage: 0.099 seconds
+Preprocessor visited node count: 521/1000000
 Post&#8208;expand include size: 8087/2097152 bytes
 Template argument size: 2889/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8134/5000000 bytes
+Unstrip post&#8208;expand size: 8144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.047      1 -total
- 22.72%    4.781      1 Template:Powerdocnavi/fr
- 14.89%    3.133      3 Template:Version/fr
- 12.93%    2.722      2 Template:VersionNote/fr
- 12.36%    2.601     37 Template:Incode
-  9.85%    2.072      1 Template:Navigation_menu_2
-  9.28%    1.954      1 Template:Code
-  8.90%    1.874      1 Template:TOCright
-  5.75%    1.211      1 Template:MenuCommand
+100.00%   25.619      1 -total
+ 25.50%    6.533      1 Template:Powerdocnavi/fr
+ 16.48%    4.223      2 Template:VersionNote/fr
+ 11.79%    3.020      1 Template:Navigation_menu_2
+ 11.61%    2.974     37 Template:Incode
+ 11.42%    2.926      1 Template:Code
+ 10.39%    2.662      1 Template:MenuCommand
+  8.74%    2.240      3 Template:Version/fr
+  5.32%    1.364      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260111213200 and revision id 1736495. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215652 and revision id 1737783. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
