--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -181,7 +181,9 @@
 <li>version_gt="VERSION" (facultatif)&nbsp;: la d&eacute;pendance au paquet est limit&eacute;e aux versions sup&eacute;rieures au num&eacute;ro de version indiqu&eacute;.</li>
 <li>optional="true|false"&nbsp;: si "optional" est "true", la d&eacute;pendance est trait&eacute;e comme facultative lorsque l'extension est install&eacute;e &agrave; l'aide du gestionnaire des extensions. En g&eacute;n&eacute;ral, cela signifie qu'un &eacute;chec de l'installation de la d&eacute;pendance n'emp&ecirc;che pas l'installation de l'extension, et l'utilisateur peut &ecirc;tre invit&eacute; &agrave; dire s'il veut l'installer. Les versions de FreeCAD ant&eacute;rieures &agrave; 0.21 ne reconnaissent pas cet attribut et l'ignorent.</li>
 <li>type="automatic|addon|internal|python"&nbsp;: facultatif, la valeur par d&eacute;faut est "automatic". Indique &agrave; quoi se r&eacute;f&egrave;re cette d&eacute;claration de d&eacute;pendance. "addon" est pour les extensions externes, "internal" est pour les ateliers internes, et "python" indique une d&eacute;pendance du paquetage Python. Les versions de FreeCAD ant&eacute;rieures &agrave; 0.21 n'utilisent pas cet attribut, et "automatic" est toujours suppos&eacute;.</li></ul>
-<h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
+<p><span id="Type:_internal"></span>
+</p>
+<h5><span class="mw-headline" id="Type_:_interne">Type&nbsp;: interne</span></h5>
 <p>The following internal workbench types are available:
 </p>
 <ul><li><code>assembly</code></li>
@@ -371,13 +373,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112215653
+Cached time: 20260112215710
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.059 seconds
-Real time usage: 0.099 seconds
-Preprocessor visited node count: 521/1000000
+Real time usage: 0.100 seconds
+Preprocessor visited node count: 522/1000000
 Post&#8208;expand include size: 8087/2097152 bytes
 Template argument size: 2889/2097152 bytes
 Highest expansion depth: 5/100
@@ -387,18 +389,18 @@ Unstrip post&#8208;expand size: 8144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.619      1 -total
- 25.50%    6.533      1 Template:Powerdocnavi/fr
- 16.48%    4.223      2 Template:VersionNote/fr
- 11.79%    3.020      1 Template:Navigation_menu_2
- 11.61%    2.974     37 Template:Incode
- 11.42%    2.926      1 Template:Code
- 10.39%    2.662      1 Template:MenuCommand
-  8.74%    2.240      3 Template:Version/fr
-  5.32%    1.364      1 Template:TOCright
+100.00%   33.052      1 -total
+ 27.72%    9.161      1 Template:Powerdocnavi/fr
+  9.92%    3.280      1 Template:Navigation_menu_2
+  9.17%    3.032      1 Template:MenuCommand
+  6.54%    2.163      1 Template:Code
+  6.07%    2.007     37 Template:Incode
+  4.96%    1.638      3 Template:Version/fr
+  4.61%    1.522      2 Template:VersionNote/fr
+  3.56%    1.176      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215652 and revision id 1737783. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215709 and revision id 1737785. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
