--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Metadane pakietu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -184,7 +184,7 @@
 <p><span id="Type:_internal"></span>
 </p>
 <h5><span class="mw-headline" id="Type_:_interne">Type&nbsp;: interne</span></h5>
-<p>The following internal workbench types are available:
+<p>Les types d'ateliers internes suivants sont disponibles&nbsp;:
 </p>
 <ul><li><code>assembly</code></li>
 <li><code>bim</code></li>
@@ -373,34 +373,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112215710
+Cached time: 20260112215725
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.059 seconds
-Real time usage: 0.100 seconds
+Real time usage: 0.099 seconds
 Preprocessor visited node count: 522/1000000
 Post&#8208;expand include size: 8087/2097152 bytes
 Template argument size: 2889/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8144/5000000 bytes
+Unstrip post&#8208;expand size: 8148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.052      1 -total
- 27.72%    9.161      1 Template:Powerdocnavi/fr
-  9.92%    3.280      1 Template:Navigation_menu_2
-  9.17%    3.032      1 Template:MenuCommand
-  6.54%    2.163      1 Template:Code
-  6.07%    2.007     37 Template:Incode
-  4.96%    1.638      3 Template:Version/fr
-  4.61%    1.522      2 Template:VersionNote/fr
-  3.56%    1.176      1 Template:TOCright
+100.00%   25.500      1 -total
+ 23.99%    6.117      1 Template:Powerdocnavi/fr
+ 13.61%    3.470     37 Template:Incode
+ 13.07%    3.332      1 Template:Navigation_menu_2
+ 11.19%    2.853      1 Template:Code
+  9.20%    2.347      1 Template:TOCright
+  8.71%    2.222      2 Template:VersionNote/fr
+  8.29%    2.113      3 Template:Version/fr
+  7.82%    1.994      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215709 and revision id 1737785. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215724 and revision id 1737787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
