--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -184,7 +184,7 @@
 <p><span id="Type:_internal"></span>
 </p>
 <h5><span class="mw-headline" id="Type_:_interne">Type&nbsp;: interne</span></h5>
-<p>Les types d'ateliers internes suivants sont disponibles&nbsp;:
+<p>Types d'ateliers internes suivants disponibles&nbsp;:
 </p>
 <ul><li><code>assembly</code></li>
 <li><code>bim</code></li>
@@ -373,12 +373,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112215725
+Cached time: 20260112215911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.099 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.085 seconds
 Preprocessor visited node count: 522/1000000
 Post&#8208;expand include size: 8087/2097152 bytes
 Template argument size: 2889/2097152 bytes
@@ -389,18 +389,18 @@ Unstrip post&#8208;expand size: 8148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.500      1 -total
- 23.99%    6.117      1 Template:Powerdocnavi/fr
- 13.61%    3.470     37 Template:Incode
- 13.07%    3.332      1 Template:Navigation_menu_2
- 11.19%    2.853      1 Template:Code
-  9.20%    2.347      1 Template:TOCright
-  8.71%    2.222      2 Template:VersionNote/fr
-  8.29%    2.113      3 Template:Version/fr
-  7.82%    1.994      1 Template:MenuCommand
+100.00%   21.302      1 -total
+ 23.37%    4.978      1 Template:Powerdocnavi/fr
+ 13.93%    2.967      2 Template:VersionNote/fr
+ 13.63%    2.904     37 Template:Incode
+ 12.88%    2.743      1 Template:TOCright
+ 11.97%    2.549      1 Template:Navigation_menu_2
+  8.86%    1.888      3 Template:Version/fr
+  7.97%    1.698      1 Template:Code
+  6.51%    1.386      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215724 and revision id 1737787. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260112215911 and revision id 1737789. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
