--- a/wiki/fr/Preferences_Editor.html
+++ b/wiki/fr/Preferences_Editor.html
@@ -1,19 +1,19 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Preferences Editor/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Preferences+Editor&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (7% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="Voreinstellungseditor (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="Voreinstellungseditor (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Preferences_Editor.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Preferences Editor (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Se&ccedil;enekler Penceresi (5% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de preferencias (11% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../hr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Ure&#273;iva&#269; postavki (3% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Impostare le preferenze (49% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="Edytor ustawie&#324; (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="Edytor ustawie&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de prefer&ecirc;ncias (8% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Editor de Prefer&ecirc;ncias (27% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (5% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (7% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor p&#345;edvoleb (7% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><a href="../bg/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="&#1052;&#1077;&#1085;&#1102; &#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; (5% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; (7% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1077;&#1082; (78% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="&#35774;&#32622;&#29992;&#25143;&#39318;&#36873;&#39033; (5% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -512,7 +512,6 @@
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_General_Page_Help.png&amp;filetimestamp=20240517105829&amp;.html" class="mw-file-description"><img src="../File/Preferences_General_Page_Help.png" decoding="async" width="400" height="259" class="mw-file-element" data-file-width="600" data-file-height="388"></a></span>
 </p><p>Sur cette page, vous pouvez sp&eacute;cifier les &eacute;l&eacute;ments suivants&nbsp;:
 </p>
-<div class="mw-translate-fuzzy">
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
 <th style="width : 33% ;">Nom
@@ -543,7 +542,6 @@
 </td>
 <td>Sp&eacute;cifie une feuille de style personnalis&eacute;e facultative. Non utilis&eacute; pour le wiki.
 </td></tr></tbody></table>
-</div>
 <p><span id="Display"></span>
 </p>
 <h2><span class="mw-headline" id="Affichage">Affichage</span></h2>
@@ -1289,35 +1287,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210122
+Cached time: 20260112215934
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.242 seconds
-Real time usage: 0.633 seconds
-Preprocessor visited node count: 2528/1000000
+CPU time usage: 0.191 seconds
+Real time usage: 0.256 seconds
+Preprocessor visited node count: 2527/1000000
 Post&#8208;expand include size: 28194/2097152 bytes
 Template argument size: 10665/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4094/5000000 bytes
+Unstrip post&#8208;expand size: 4129/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  122.223      1 -total
- 12.49%   15.271      1 Template:Userdocnavi/fr
- 10.24%   12.521      3 Template:PropertyView
- 10.15%   12.400    228 Template:MenuCommand
-  8.60%   10.515     11 Template:Value
-  8.17%    9.985     14 Template:FileName
-  6.48%    7.917      1 Template:Navigation_menu_2
-  6.40%    7.826      1 Template:FALSE
-  5.18%    6.333      2 Template:Docnav/fr
-  4.11%    5.028     43 Template:Version/fr
+100.00%   45.815      1 -total
+ 15.99%    7.328    228 Template:MenuCommand
+ 12.35%    5.660      1 Template:Userdocnavi/fr
+  7.50%    3.437      3 Template:PropertyView
+  6.61%    3.029     43 Template:Version/fr
+  6.30%    2.888     11 Template:Value
+  5.51%    2.525      1 Template:Navigation_menu_2
+  5.01%    2.296      2 Template:Docnav/fr
+  4.62%    2.118      3 Template:Variable
+  4.53%    2.074      2 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:858-0!canonical and timestamp 20260111210121 and revision id 1736283. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:858-0!canonical and timestamp 20260112215934 and revision id 1737791. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
