--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -13,7 +13,9 @@
 <li><a href="../ja/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="&#12518;&#12540;&#12470;&#12540;&#12539;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#51064;&#53552;&#54168;&#51060;&#49828; (59% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <p>The FreeCAD <a href="../Interface.html" title="Interface">interface</a> is based on Qt, a well known graphical user interface (GUI) toolkit, particularly used in Linux, but also available in Windows and MacOS.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
@@ -120,13 +122,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113072838
+Cached time: 20260113072854
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.102 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.063 seconds
+Real time usage: 0.092 seconds
+Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -136,18 +138,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.814      1 -total
- 40.62%    8.860      1 Template:Interface_navi/bg
- 16.41%    3.581      7 Template:StdMenu
- 14.69%    3.205      1 Template:Userdocnavi/bg
- 11.48%    2.504      2 Template:Navigation_menu_2
-  8.27%    1.803     20 Template:MenuCommand
-  7.11%    1.551      1 Template:Version
-  6.90%    1.506      1 Template:Caption
-  6.57%    1.433      1 Template:TOCright
+100.00%   18.702      1 -total
+ 31.52%    5.894      1 Template:Interface_navi/bg
+ 24.19%    4.524      1 Template:Userdocnavi/bg
+ 20.09%    3.757      2 Template:Navigation_menu_2
+ 13.25%    2.478      7 Template:StdMenu
+  9.95%    1.860      1 Template:Version
+  8.22%    1.538     20 Template:MenuCommand
+  6.11%    1.143      1 Template:Caption
+  5.73%    1.072      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260113072838 and revision id 1737796. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260113072854 and revision id 1737798. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
