Updated page Std SetAppearance/it

--- a/wiki/it/Std_SetAppearance.html
+++ b/wiki/it/Std_SetAppearance.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Std SetAppearance/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Std+SetAppearance&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--high" title="Std DarstellungFestlegen (94% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--complete" title="Std DarstellungFestlegen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Std_SetAppearance.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Std SetAppearance (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--high" title="Std Apparence (94% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--high" title="Std: Wygl&#261;d zewn&#281;trzny (94% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../fr/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--complete" title="Std Apparence (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--complete" title="Std: Wygl&#261;d zewn&#281;trzny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--low" title="Apar&ecirc;ncia (6% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Std_SetAppearance.html" class="mw-pt-progress mw-pt-progress--med" title='&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; "&#1042;&#1085;&#1077;&#1096;&#1085;&#1080;&#1081; &#1074;&#1080;&#1076;..." (28% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -99,9 +99,9 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Note">Note</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Le propriet&agrave; di visualizzazione menzionate possono essere modificate anche nell'<a href="../it/Property_editor.html" class="mw-redirect" title="Property editor/it">Editor delle propriet&agrave;</a>.</li></ul>
-</div>
+<ul><li>Le propriet&agrave; di visualizzazione menzionate possono essere modificate anche nella <a href="../it/Property_View.html" title="Property View/it">Vista propriet&agrave;</a>.</li>
+<li><a href="../it/Std_SetMaterial.html#Assigning_a_material_affects_appearance" title="Std SetMaterial/it">L'assegnazione di un materiale influisce sull'aspetto</a>.</li>
+<li><a href="../it/Material_Workbench.html#Working_with_materials" title="Material Workbench/it">Lavorare con i materiali</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -121,8 +121,8 @@
 <ul><li><b><a href="../it/Std_View_Menu.html" title="Std View Menu/it">View</a>:</b>
 <ul><li><b>Miscellaneous:</b> <a href="../it/Std_ViewCreate.html" title="Std ViewCreate/it">New 3D View</a>, <a href="../it/Std_OrthographicCamera.html" title="Std OrthographicCamera/it">Orthographic View</a>, <a href="../it/Std_PerspectiveCamera.html" title="Std PerspectiveCamera/it">Perspective View</a>, <a href="../it/Std_MainFullscreen.html" title="Std MainFullscreen/it">Fullscreen</a>, <a href="../it/Std_SelBoundingBox.html" title="Std SelBoundingBox/it">Bounding Box</a>, <a href="../it/Std_AxisCross.html" title="Std AxisCross/it">Toggle Axis Cross</a>, <a href="../it/Std_ToggleClipPlane.html" title="Std ToggleClipPlane/it">Clipping View</a>, <a href="../it/Std_TextureMapping.html" title="Std TextureMapping/it">Texture Mapping</a>, <a href="../it/Std_ToggleNavigation.html" title="Std ToggleNavigation/it">Toggle Navigation/Edit Mode</a>, <a href="../it/Std_SetMaterial.html" title="Std SetMaterial/it">Material</a>, <a class="mw-selflink selflink">Appearance</a>, <a href="../it/Std_RandomColor.html" title="Std RandomColor/it">Random Color</a>, <a href="../it/Part_ColorPerFace.html" title="Part ColorPerFace/it">Appearance per Face</a>, <a href="../it/Std_ToggleTransparency.html" title="Std ToggleTransparency/it">Toggle Transparency</a>, <a href="../it/Std_Workbench.html" title="Std Workbench/it">Workbench</a>, <a href="../it/Std_ViewStatusBar.html" title="Std ViewStatusBar/it">Status Bar</a></li>
 <li><b>Standard Views:</b> <a href="../it/Std_ViewFitAll.html" title="Std ViewFitAll/it">Fit All</a>, <a href="../it/Std_ViewFitSelection.html" title="Std ViewFitSelection/it">Fit Selection</a>, <a href="../it/Std_AlignToSelection.html" title="Std AlignToSelection/it">Align to Selection</a>, <a href="../it/Std_ViewIsometric.html" title="Std ViewIsometric/it">Isometric</a>, <a href="../it/Std_ViewDimetric.html" title="Std ViewDimetric/it">Dimetric</a>, <a href="../it/Std_ViewTrimetric.html" title="Std ViewTrimetric/it">Trimetric</a>, <a href="../it/Std_ViewHome.html" title="Std ViewHome/it">Home</a>, <a href="../it/Std_ViewFront.html" title="Std ViewFront/it">Front</a>, <a href="../it/Std_ViewTop.html" title="Std ViewTop/it">Top</a>, <a href="../it/Std_ViewRight.html" title="Std ViewRight/it">Right</a>, <a href="../it/Std_ViewRear.html" title="Std ViewRear/it">Rear</a>, <a href="../it/Std_ViewBottom.html" title="Std ViewBottom/it">Bottom</a>, <a href="../it/Std_ViewLeft.html" title="Std ViewLeft/it">Left</a>, <a href="../it/Std_ViewRotateLeft.html" title="Std ViewRotateLeft/it">Rotate Left</a>, <a href="../it/Std_ViewRotateRight.html" title="Std ViewRotateRight/it">Rotate Right</a>, <a href="../it/Std_StoreWorkingView.html" title="Std StoreWorkingView/it">Store Working View</a>, <a href="../it/Std_RecallWorkingView.html" title="Std RecallWorkingView/it">Recall Working View</a></li>
-<li><b><a href="../it/Std_FreezeViews.html" title="Std FreezeViews/it">Freeze Display</a>:</b> <a href="../it/Std_FreezeViews.html#Save_views" title="Std FreezeViews/it">Save Views</a>, <a href="../it/Std_FreezeViews.html#Load_views" title="Std FreezeViews/it">Load Views</a>, <a href="../it/Std_FreezeViews.html#Freeze_view" title="Std FreezeViews/it">Freeze View</a>, <a href="../it/Std_FreezeViews.html#Clear_views" title="Std FreezeViews/it">Clear Views</a></li>
-<li><b><a href="../it/Std_DrawStyle.html" title="Std DrawStyle/it">Draw Style</a>:</b> <a href="../it/Std_DrawStyle.html#As_is" title="Std DrawStyle/it">As Is</a>, <a href="../it/Std_DrawStyle.html#Points" title="Std DrawStyle/it">Points</a>, <a href="../it/Std_DrawStyle.html#Wireframe" title="Std DrawStyle/it">Wireframe</a>, <a href="../it/Std_DrawStyle.html#Hidden_line" title="Std DrawStyle/it">Hidden Line</a>, <a href="../it/Std_DrawStyle.html#No_shading" title="Std DrawStyle/it">No Shading</a>, <a href="../it/Std_DrawStyle.html#Shaded" title="Std DrawStyle/it">Shaded</a>, <a href="../it/Std_DrawStyle.html#Flat_lines" title="Std DrawStyle/it">Flat Lines</a></li>
+<li><b><a href="../it/Std_FreezeViews.html" title="Std FreezeViews/it">Freeze Display</a>:</b> <a href="../it/Std_FreezeViews.html#Save_Views" title="Std FreezeViews/it">Save Views</a>, <a href="../it/Std_FreezeViews.html#Load_Views" title="Std FreezeViews/it">Load Views</a>, <a href="../it/Std_FreezeViews.html#Freeze_View" title="Std FreezeViews/it">Freeze View</a>, <a href="../it/Std_FreezeViews.html#Clear_Views" title="Std FreezeViews/it">Clear Views</a></li>
+<li><b><a href="../it/Std_DrawStyle.html" title="Std DrawStyle/it">Draw Style</a>:</b> <a href="../it/Std_DrawStyle.html#As_Is" title="Std DrawStyle/it">As Is</a>, <a href="../it/Std_DrawStyle.html#Points" title="Std DrawStyle/it">Points</a>, <a href="../it/Std_DrawStyle.html#Wireframe" title="Std DrawStyle/it">Wireframe</a>, <a href="../it/Std_DrawStyle.html#Hidden_Line" title="Std DrawStyle/it">Hidden Line</a>, <a href="../it/Std_DrawStyle.html#No_Shading" title="Std DrawStyle/it">No Shading</a>, <a href="../it/Std_DrawStyle.html#Shaded" title="Std DrawStyle/it">Shaded</a>, <a href="../it/Std_DrawStyle.html#Flat_Lines" title="Std DrawStyle/it">Flat Lines</a></li>
 <li><b>Stereo:</b> <a href="../it/Std_ViewIvStereoRedGreen.html" title="Std ViewIvStereoRedGreen/it">Stereo Red/Cyan</a>, <a href="../it/Std_ViewIvStereoQuadBuff.html" title="Std ViewIvStereoQuadBuff/it">Stereo Quad Buffer</a>, <a href="../it/Std_ViewIvStereoInterleavedRows.html" title="Std ViewIvStereoInterleavedRows/it">Stereo Interleaved Rows</a>, <a href="../it/Std_ViewIvStereoInterleavedColumns.html" title="Std ViewIvStereoInterleavedColumns/it">Stereo Interleaved Columns</a>, <a href="../it/Std_ViewIvStereoOff.html" title="Std ViewIvStereoOff/it">Stereo Off</a>, <a href="../it/Std_ViewIvIssueCamPos.html" title="Std ViewIvIssueCamPos/it">Issue Camera Position</a></li>
 <li><b>Zoom:</b> <a href="../it/Std_ViewZoomIn.html" title="Std ViewZoomIn/it">Zoom In</a>, <a href="../it/Std_ViewZoomOut.html" title="Std ViewZoomOut/it">Zoom Out</a>, <a href="../it/Std_ViewBoxZoom.html" title="Std ViewBoxZoom/it">Box Zoom</a></li>
 <li><b>Document Window:</b> <a href="../it/Std_ViewDockUndockFullscreen.html#Docked" title="Std ViewDockUndockFullscreen/it">Docked</a>, <a href="../it/Std_ViewDockUndockFullscreen.html#Undocked" title="Std ViewDockUndockFullscreen/it">Undocked</a>, <a href="../it/Std_ViewFullscreen.html" title="Std ViewFullscreen/it">Fullscreen</a></li>
@@ -133,7 +133,7 @@
 <li><b>Link Navigation:</b> <a href="../it/Std_LinkSelectLinked.html" title="Std LinkSelectLinked/it">Go to Linked Object</a>, <a href="../it/Std_LinkSelectLinkedFinal.html" title="Std LinkSelectLinkedFinal/it">Go to Deepest Linked Object</a>, <a href="../it/Std_LinkSelectAllLinks.html" title="Std LinkSelectAllLinks/it">Select All Links</a></li>
 <li><b>Tree View Actions:</b> <a href="../it/Std_TreeSyncView.html" title="Std TreeSyncView/it">Sync View</a>, <a href="../it/Std_TreeSyncSelection.html" title="Std TreeSyncSelection/it">Sync Selection</a>, <a href="../it/Std_TreeSyncPlacement.html" title="Std TreeSyncPlacement/it">Sync Placement</a>, <a href="../it/Std_TreePreSelection.html" title="Std TreePreSelection/it">Preselection</a>, <a href="../it/Std_TreeRecordSelection.html" title="Std TreeRecordSelection/it">Record Selection</a>, <a href="../it/Std_TreeSingleDocument.html" title="Std TreeSingleDocument/it">Single Document</a>, <a href="../it/Std_TreeMultiDocument.html" title="Std TreeMultiDocument/it">Multi Document</a>, <a href="../it/Std_TreeCollapseDocument.html" title="Std TreeCollapseDocument/it">Collapse/Expand</a>, <a href="../it/Std_TreeDrag.html" title="Std TreeDrag/it">Initiate Dragging</a>, <a href="../it/Std_TreeSelection.html" title="Std TreeSelection/it">Go to Selection</a>, <a href="../it/Std_SelBack.html" title="Std SelBack/it">Selection Back</a>, <a href="../it/Std_SelForward.html" title="Std SelForward/it">Selection Forward</a></li></ul></li></ul>
 <hr>
-<ul><li><b><a href="../it/Std_Tools_Menu.html" title="Std Tools Menu/it">Tools</a>:</b> <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>, <a href="../it/Std_Measure.html" title="Std Measure/it">Measure</a>, <a href="../index.php?title=Std_ClarifySelection/it&amp;action=edit&amp;redlink=1.html" class="new" title="Std ClarifySelection/it (page does not exist)">Clarify Selection</a>, <a href="../it/Status_Bar.html#Quick_Measure" title="Status Bar/it">Quick Measure</a>, <a href="../it/Std_UnitsCalculator.html" title="Std UnitsCalculator/it">Units Converter</a>, <a href="../it/Std_ViewLoadImage.html" title="Std ViewLoadImage/it">Load Image</a>, <a href="../it/Std_ViewScreenShot.html" title="Std ViewScreenShot/it">Save Image</a>, <a href="../it/Std_TextDocument.html" title="Std TextDocument/it">Text Document</a>, <a href="../it/Std_DemoMode.html" title="Std DemoMode/it">View Turntable</a>, <a href="../it/Std_SceneInspector.html" title="Std SceneInspector/it">Scene Inspector</a>, <a href="../it/Std_DependencyGraph.html" title="Std DependencyGraph/it">Dependency Graph</a>, <a href="../it/Std_ExportDependencyGraph.html" title="Std ExportDependencyGraph/it">Export Dependency Graph</a>, <a href="../it/Std_ProjectUtil.html" title="Std ProjectUtil/it">Document Utility</a>, <a href="../it/Std_DlgParameter.html" title="Std DlgParameter/it">Edit Parameters</a>, <a href="../it/Std_DlgCustomize.html" title="Std DlgCustomize/it">Customize</a></li></ul>
+<ul><li><b><a href="../it/Std_Tools_Menu.html" title="Std Tools Menu/it">Tools</a>:</b> <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>, <a href="../it/Std_Measure.html" title="Std Measure/it">Measure</a>, <a href="../index.php?title=Std_ClarifySelection/it&amp;action=edit&amp;redlink=1.html" class="new" title="Std ClarifySelection/it (page does not exist)">Clarify Selection</a>, <a href="../it/Status_Bar.html#Quick_measure" title="Status Bar/it">Quick Measure</a>, <a href="../it/Std_UnitsCalculator.html" title="Std UnitsCalculator/it">Units Converter</a>, <a href="../it/Std_ViewLoadImage.html" title="Std ViewLoadImage/it">Load Image</a>, <a href="../it/Std_ViewScreenShot.html" title="Std ViewScreenShot/it">Save Image</a>, <a href="../it/Std_TextDocument.html" title="Std TextDocument/it">Text Document</a>, <a href="../it/Std_DemoMode.html" title="Std DemoMode/it">View Turntable</a>, <a href="../it/Std_SceneInspector.html" title="Std SceneInspector/it">Scene Inspector</a>, <a href="../it/Std_DependencyGraph.html" title="Std DependencyGraph/it">Dependency Graph</a>, <a href="../it/Std_ExportDependencyGraph.html" title="Std ExportDependencyGraph/it">Export Dependency Graph</a>, <a href="../it/Std_ProjectUtil.html" title="Std ProjectUtil/it">Document Utility</a>, <a href="../it/Std_DlgParameter.html" title="Std DlgParameter/it">Edit Parameters</a>, <a href="../it/Std_DlgCustomize.html" title="Std DlgCustomize/it">Customize</a></li></ul>
 <hr>
 <ul><li><b><a href="../it/Std_Macro_Menu.html" title="Std Macro Menu/it">Macro</a>:</b> <a href="../it/Std_DlgMacroRecord.html" title="Std DlgMacroRecord/it">Record Macro</a>, <a href="../it/Std_DlgMacroExecute.html" title="Std DlgMacroExecute/it">Macros</a>, Recent Macros, <a href="../it/Std_DlgMacroExecuteDirect.html" title="Std DlgMacroExecuteDirect/it">Execute Macro</a>, <a href="../it/Std_MacroAttachDebugger.html" title="Std MacroAttachDebugger/it">Attach to Remote Debugger</a>, <a href="../it/Std_MacroStartDebug.html" title="Std MacroStartDebug/it">Debug Macro</a>, <a href="../it/Std_MacroStopDebug.html" title="Std MacroStopDebug/it">Stop Debugging</a>, <a href="../it/Std_MacroStepOver.html" title="Std MacroStepOver/it">Step Over</a>, <a href="../it/Std_MacroStepInto.html" title="Std MacroStepInto/it">Step Into</a>, <a href="../it/Std_ToggleBreakpoint.html" title="Std ToggleBreakpoint/it">Toggle Breakpoint</a></li></ul>
 <hr>
@@ -164,35 +164,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251116235650
+Cached time: 20260113122543
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.167 seconds
-Preprocessor visited node count: 826/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.165 seconds
+Preprocessor visited node count: 825/1000000
 Post&#8208;expand include size: 35163/2097152 bytes
 Template argument size: 13789/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1539/5000000 bytes
+Unstrip post&#8208;expand size: 1558/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.235      1 -total
- 31.67%   16.543      1 Template:Std_Base_navi/it
- 17.42%    9.102      2 Template:Navigation_menu_2
- 16.10%    8.409      1 Template:Userdocnavi/it
- 14.69%    7.675      1 Template:GuiCommand/it
-  8.58%    4.483      2 Template:Docnav/it
-  7.58%    3.960      6 Template:PropertyView
-  7.04%    3.677      2 Template:MenuCommand
-  5.16%    2.693      7 Template:Value
-  4.95%    2.584      4 Template:KEY
+100.00%   47.162      1 -total
+ 21.38%   10.083      1 Template:Std_Base_navi/it
+ 17.52%    8.263      2 Template:Docnav/it
+ 16.99%    8.012      2 Template:Navigation_menu_2
+ 15.99%    7.542      1 Template:GuiCommand/it
+ 10.84%    5.110      7 Template:Value
+ 10.60%    4.998      6 Template:PropertyView
+  9.09%    4.286      1 Template:Userdocnavi/it
+  7.06%    3.330      4 Template:KEY
+  6.78%    3.199      6 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:4073-0!canonical and timestamp 20251116235649 and revision id 1694104. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:4073-0!canonical and timestamp 20260113122543 and revision id 1737825. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
