Updated page Macro TechDraw AuxiliaryView/de

--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -75,7 +75,7 @@ TechDraw Hilfsansicht
 </p>
 <h2><span class="mw-headline" id="Einleitung">Einleitung</span></h2>
 <p>Nicht jeder, der eine Zeichnung mit seinem Modell mitliefern muss, kommt mit nur drei Hauptansichten (prim&auml;ren Ansichten) und Schnittansichten parallel zu diesen aus. Um ein Modell aus allen m&ouml;glichen Winkeln abzubilden, sind Konstrukteure auf Hilfsansichten (auxiliary views, sekund&auml;re Ansichten) angewiesen, die in einer bestimmten Anordnung auf einem Zeichenblatt positioniert werden, um den Weg nachverfolgen zu k&ouml;nnen, wie jede der verketteten Ansichten festgelegt wurde. Unzusammenh&auml;ngende Ansichten, im 3D-Raum festgelegt und beliebig auf dem Zeichenblatt positioniert, sind kein brauchbarer Ersatz f&uuml;r richtig angeordnete Hilfsansichten.
-</p><p>Bis jetzt stellt diese Seite nur ein Makro zur Verf&uuml;gung, das zeigt, dass es m&ouml;glich ist, eine Hilfsansicht innerhalb einer Basisansicht festzulegen, ohne den Umweg &uuml;ber den 3D-Raum zu nehmen.
+</p><p>Bis jetzt stellt diese Seite nur ein Makro bereit, das einen Machbarkeitsnachweis darstellt, der zeigt, dass es m&ouml;glich ist, eine Hilfsansicht innerhalb einer Basisansicht festzulegen, ohne den Umweg &uuml;ber den 3D-Raum zu nehmen.
 </p><p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113142412
+Cached time: 20260113142804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.090 seconds
+CPU time usage: 0.077 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.125      1 -total
- 27.67%    5.568      1 Template:TechDraw_Tools_navi/de
- 22.03%    4.433      1 Template:Macro/de
- 17.50%    3.521      2 Template:Navigation_menu_2
-  9.70%    1.953      1 Template:Caption
-  9.10%    1.831      1 Template:Userdocnavi/de
-  8.92%    1.795      1 Template:MacroCode
-  7.56%    1.521      1 Template:Clear
-  5.93%    1.193      1 Template:VeryImportantMessage
-  5.63%    1.134      1 Template:Button
+100.00%   24.268      1 -total
+ 24.76%    6.008      1 Template:TechDraw_Tools_navi/de
+ 24.53%    5.954      1 Template:Macro/de
+ 14.70%    3.566      2 Template:Navigation_menu_2
+ 10.17%    2.468      1 Template:Userdocnavi/de
+  9.85%    2.391      1 Template:MacroCode
+  8.26%    2.004      1 Template:Caption
+  7.24%    1.757      1 Template:VeryImportantMessage
+  6.38%    1.547      1 Template:Clear
+  5.60%    1.359      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113142412 and revision id 1737853. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113142804 and revision id 1737855. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
