Updated page Macro TechDraw AuxiliaryView/de

--- a/wiki/de/Macro_TechDraw_AuxiliaryView.html
+++ b/wiki/de/Macro_TechDraw_AuxiliaryView.html
@@ -79,7 +79,7 @@ TechDraw Hilfsansicht
 </p><p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das <b>Macro TechDraw AuxiliaryView</b> f&uuml;gt einem TechDraw-Zeichnungsblatt eine Hilfsansicht (AuxView-Objekt) hinzu. Dies ist eine einfache Ansicht, die in einer Basisansicht angelegt wird, anstatt im 3D-Raum.
+<p>Das <b>Macro TechDraw AuxiliaryView</b> f&uuml;gt einem TechDraw-Zeichnungsblatt eine Hilfsansicht (AuxView-Objekt) hinzu. Dies ist eine einfache Ansicht, die in einer Basisansicht festgelegt wird, anstatt im 3D-Raum.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_AuxiliaryView_Pre01.png&amp;filetimestamp=20250507155950&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AuxiliaryView_Pre01.png" decoding="async" width="300" height="225" class="mw-file-element" data-file-width="800" data-file-height="600"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Eine Hilfsansicht, die durch die rote Linie in der Basisansicht auf der rechten Seite bestimmt wird</p>
@@ -420,12 +420,12 @@ if __name__ == "__main__":
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113142804
+Cached time: 20260113142852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.103 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.093 seconds
 Preprocessor visited node count: 268/1000000
 Post&#8208;expand include size: 26642/2097152 bytes
 Template argument size: 20237/2097152 bytes
@@ -436,19 +436,19 @@ Unstrip post&#8208;expand size: 10897/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.268      1 -total
- 24.76%    6.008      1 Template:TechDraw_Tools_navi/de
- 24.53%    5.954      1 Template:Macro/de
- 14.70%    3.566      2 Template:Navigation_menu_2
- 10.17%    2.468      1 Template:Userdocnavi/de
-  9.85%    2.391      1 Template:MacroCode
-  8.26%    2.004      1 Template:Caption
-  7.24%    1.757      1 Template:VeryImportantMessage
-  6.38%    1.547      1 Template:Clear
-  5.60%    1.359      1 Template:Button
+100.00%   22.933      1 -total
+ 27.65%    6.341      1 Template:TechDraw_Tools_navi/de
+ 24.07%    5.521      1 Template:Macro/de
+ 14.86%    3.407      2 Template:Navigation_menu_2
+ 11.94%    2.738      1 Template:MacroCode
+ 10.06%    2.308      1 Template:Userdocnavi/de
+  6.59%    1.510      1 Template:Caption
+  6.28%    1.439      1 Template:Clear
+  5.26%    1.206      1 Template:VeryImportantMessage
+  5.25%    1.203      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113142804 and revision id 1737855. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:381604-0!canonical and timestamp 20260113142852 and revision id 1737857. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
